--- a/src/main/resources/templates/completed.html
+++ b/src/main/resources/templates/completed.html
@@ -10,6 +10,6 @@
 	</header>
 	<h3>宿の予約が完了しました<br>
     ご利用ありがとうございます</h3>
-    <button>OK</button>
+    <button>OK</button><!--test-->
 </body>
 </html>
