--- a/src/main/resources/templates/completed.html
+++ b/src/main/resources/templates/completed.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>Add commentMore actions
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+<meta charset="UTF-8">
+<title>ログイン</title>
+</head>
+<body>
+	<header>
+		<h1>休.com</h1>
+	</header>
+	<h3>宿の予約が完了しました<br>
+    ご利用ありがとうございます</h3>
+    <button>OK</button>
+</body>
+</html>
