--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -15,7 +15,7 @@
     クレジットカード番号　0123-4567-8910-1112<br>
     セキュリティ番号　123<br>
     有効期限 28/12
-    <button>戻る</button>
+    <button>戻る</button><br>
     <button>予約確定</button>
 </body>
 </html>
