--- a/src/main/resources/templates/hotels.html
+++ b/src/main/resources/templates/hotels.html
@@ -1,9 +1,44 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <title>Hotels</title>
+	<meta charset="UTF-8">
+	<title>kani'shop</title>
+	<link rel="stylesheet" type="text/css" href="/css/style.css">
+
+	<!-- Google Fonts 読み込み -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Zen+Kaku+Gothic+New:wght@400;500;700&display=swap"
+		rel="stylesheet">
 </head>
+
 <body>
-    <h1>ホテル一覧ページ</h1>
+	<h1>ホテル一覧ページ</h1>
+
+	<div class="row">
+		<div class="col" th:each="hotel : ${hotels}">
+			<a th:href="@{/hoteldetail/{Id}(id=${hotel.id})}">
+				<div class="div4">
+					<img th:src="${hotel.image}" height="140px" alt="">
+					<h3 th:text="${hotel.name}"></h3>
+					<div th:text="${hotel.price} + '円'"></div>
+				</div>
+			</a>
+			<div class="div3">
+				<form action="/addGood" method="get">
+					<input type="hidden" name="hotelid" th:value="${hotel.id}">
+					<button>欲しいものリストに追加</button>
+				</form>
+				<form action="/cart/add" method="post">
+					<input type="hidden" name="hotelid" th:value="${hotel.id}">
+					<button>カートに追加</button>
+				</form>
+			</div>
+		</div>
+	</div>
+
 </body>
+
 </html>
