--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -10,7 +10,7 @@
 	</header>
 	<h1>マイページ</h1>
 	<a>[[${@account.name}]]さん</a>
-	<form action="/mypage/edit" method="get">
+	<form action="/mypage" method="get">
 		<button>プロフィールを編集する</button>
 	</form>
 	<a href="/yado/history">ご予約履歴はこちら</a>
