--- a/src/main/resources/templates/reservation.html
+++ b/src/main/resources/templates/reservation.html
@@ -11,7 +11,7 @@
 	<h2>宿予約内容確認</h2>
 	<span th:text="${hotels.name}"></span>
     <span th:text="${hotels.address}"></span>
-    <span th:text="${date}"></span><br>
+<!--    <span th:text="${date}"></span><br>-->
 
     <h2>クレジットカード情報・変更・登録</h2>
     <table>
