--- a/src/main/resources/templates/hotelsdetail.html
+++ b/src/main/resources/templates/hotelsdetail.html
@@ -1,4 +1,4 @@
-<! DOCTYPE html>
+<!DOCTYPE html>
 	<html xmlns:th="http://www.thymeleaf.org">
 
 	<head>
@@ -29,7 +29,7 @@
 				<p th:text="${hotels.detail}">
 				</p>
 				<h2 th:text="${hotels.price}+円"></h2>
-				<form action="/" method="get">
+				<form th:action="@{/reservation/{id}(id=${hotels.id})}" method="post">
 					<button>予約</button>
 				</form> 
 			</div>
