--- a/src/main/resources/templates/hotels.html
+++ b/src/main/resources/templates/hotels.html
@@ -17,18 +17,41 @@
 <body>
 	<header th:replace="header">
 	</header>
-	
-	<h1>ホテル一覧ページ</h1>
 
-	<div class="row">
-		<div class="col" th:each="hotel : ${hotels}">
-			<a th:href="@{/hotelsdetail/{Id}(id=${hotel.id})}">
-				<div class="div4">
-					<img th:src="${hotel.image}" height="140px" alt="ホテル画像">
-					<h3 th:text="${hotel.name}"></h3>
-					<div th:text="${hotel.price} + '円'"></div>
-				</div>
-			</a>
+	<h1>ホテル一覧ページ</h1>
+	<div class="aa">
+		<div class="bb">
+			<form><input type="text" name="keyword" th:value="${keyword}" placeholder="検索"><br>
+				<input type="radio" name="price" value="">上限なし
+				<input type="radio" name="price" value="9000">9000円以下
+				<input type="radio" name="price" value="10000">10000円以下
+				<input type="radio" name="price" value="14000">14000円以下
+				<br>金額で絞り込む
+				<input type="radio" name="capacity" value="">上限なし
+				<input type="radio" name="capacity" value="1">1人
+				<input type="radio" name="capacity" value="2">2人
+				<input type="radio" name="capacity" value="3">3人
+				<form>
+					<br><button>検索</button>
+				</form>
+				<a href="/hotels">全商品</a>
+				<a th:each="area : ${areas}" th:href="@{/hotels(areaId=${area.id})}" th:text="${area.name}"
+					style="margin-right: 5px;"></a><br>
+				地域を選ぶ<br>
+
+		</div>
+
+		<div class="row">
+			<div class="col" th:each="hotel : ${hotels}">
+				<a th:href="@{/hotelsdetail/{Id}(id=${hotel.id})}">
+					<div class="div4">
+						<img th:src="${hotel.image}" height="140px" alt="ホテル画像">
+						<h3 th:text="${hotel.name}"></h3>
+						<div th:text="${hotel.price} + '円'"></div>
+						<div th:text="${hotel.capacity}"></div>
+					</div>
+				</a>
+			</div>
 		</div>
 	</div>
 	<!-- ページネーションリンク -->
