--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -21,7 +21,7 @@
 			<input type="email" name="email" placeholder="メールアドレス"><br>
 			<input type="text" name="address" placeholder="住所"><br>
 			<input type="text" name="tel" placeholder="電話番号" maxlength="11" oninput="this.value=this.value.replace(/[^0-9]/g,'');"><br>
-			<input type="password" minlength="8" placeholder="パスワード（8文字以上）"><br>
+			<input type="password" name="password" minlength="8" placeholder="パスワード（8文字以上）"><br>
 			<input type="text" name="cardNo" placeholder="クレジットカード情報登録" maxlength="16" oninput="this.value=this.value.replace(/[^0-9]/g,'');"><br>
 			<p>アイコンの写真選択</p><input type="file" name="image" placeholder="アイコンの写真"><br>
 <!--			<input type="password" name="password_confirm" placeholder="パスワード(確認）"><br>-->
