--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -523,9 +523,7 @@ label {
   margin-bottom: 5px;
 }
 
-input[type="text"],
-input[type="password"],
-input[type="email"]{
+.login_text {
   width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
