CSSと画像の追加

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,5 +1,5 @@
 <header id="header">
-	<a href="/items" class="logo"><img src="/css/logo.png" width="19.5%"></a>
+	<a href="/items" class="logo"><img src="/image/logo.png" width="19.5%"></a>
 	<div class="keyp">
 
 		<div class="key">
