--- a/src/main/resources/templates/hotels.html
+++ b/src/main/resources/templates/hotels.html
@@ -18,10 +18,14 @@
 	<header th:replace="header">
 	</header>
 
-	
+
 	<main>
 
-		<img src="image/1-9.jpg" width="100%">
+		<div class="relative">
+			<img src="image/1-10.png" width="100%" class="imgth">
+			<div class="boxer">こんにちは
+			</div>
+		</div>
 		<div class="aa">
 			<div class="bb">
 				<form><input type="text" name="keyword" th:value="${keyword}" placeholder="検索"><br>
