--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,8 +19,8 @@
 		
 
     <form action="/login" method="post">
-            <input class="login_text" type="text" name="email" placeholder="メールアドレス"><br>
-            <input class="login_text"type="password" name="password" placeholder="パスワード"><br>
+            <input type="text" name="email" placeholder="メールアドレス"><br>
+            <input type="password" name="password" placeholder="パスワード"><br>
             <button class="login_button">ログイン</button>
     </form>
      <p>アカウントをお持ちではありませんか？</p>
