--- a/src/main/resources/static/css/Jung.css
+++ b/src/main/resources/static/css/Jung.css
@@ -309,9 +309,9 @@ body {
 }
 
 li {
-	color: #000000;
-	font-size: 20px;
-	font-family: 'M PLUS 1p', sans-serif;
+/*	color: #000000;*/
+/*	font-size: 20px;*/
+/*	font-family: 'M PLUS 1p', sans-serif;*/
 
 }
 
