AccountController,HotelsController,Reservation,schema,completed,hotels,reservationの内容を変更・修正しました。多分予約が完了できる

--- a/src/main/resources/templates/hotels.html
+++ b/src/main/resources/templates/hotels.html
@@ -50,7 +50,7 @@
 
 			<div class="row">
 				<div class="col" th:each="hotel : ${hotels}">
-					<a th:href="@{/hotelsdetail/{Id}(id=${hotel.id})}">
+					<a th:href="@{/hotelsdetail/{id}(id=${hotel.id})}">
 						<div class="div4">
 							<img th:src="${hotel.image}" height="140px" alt="ホテル画像">
 							<h3 th:text="${hotel.name}"></h3>
