--- a/src/main/resources/templates/completed.html
+++ b/src/main/resources/templates/completed.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>Add commentMore actions
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
@@ -10,7 +10,8 @@
 	</header>
 	<h3>宿の予約が完了しました<br>
     ご利用ありがとうございます</h3>
-    <button>OK</button>
-	<!--test-->
+	<form action="/hotels" method="get">
+    	<button>OK</button>
+	</form>
 </body>
 </html>
