--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -10,7 +10,7 @@
 		<h1>休.com</h1>
 	</header>
 	[[${@account.name}]]さんのご予約履歴
-	<img src="yado2.jpg" width="300px" height="200px">
-	
+	<img src="yado2.jpg" width="300px" height="200px"><br>
+	<a href="/mypage">マイページへ</a>
 </body>
 </html>
