--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>会員情報変更</title>
-	<link rel="stylesheet" type="text/css" href="/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/css/tachiki.css">
 </head>
 
 <body>
@@ -13,10 +13,10 @@
 	</header>
 
 	<ul th:if="${errors}" class="error">
-		<li th:each="error : ${errors}" th:text="${error}"></li>
+		<li th:each="error : ${errors}" th:text="${error}" class="edit-error"></li>
 	</ul>
-	<main>
-	<a href="/mypage" class="edit-h1">会員情報変更</h1>
+	<main class="edit-main">
+	<h1 class="edit-h1">会員情報変更</h1>
 	<form action="/mypage/edit" class="edit-form" method="post">
 		<input type="text" name="name" placeholder="*名前"><br>
 		<input type="text" name="email" placeholder="*メールアドレス"><br>
@@ -29,10 +29,13 @@
 		<a>/</a>
 		<input type="text" style="width: 80px;" name="expiry" placeholder="年(下二桁)"><br>
 		<input type="file" name="image"><br>
-		<a>*は必須項目です</a><br>
-		<button>変更</button>
+		<a class="edit-commentt">*は必須項目です</a><br>
+		<button class="edit-button">変更</button>
 	</form>
 	</main>
+	<div style="text-align: center;">
+	     <a href="/mypage">マイページへ</a>
+	   </div>
 </body>
 
 </html>
