--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -6,13 +6,12 @@
 <link rel="stylesheet" type="text/css" href="/css/tachiki.css">
 </head>
 <body>
-	<header>
-		<h1>休.com</h1>
-	</header>
+	<h1>休.com</h1>
 	<h1 class="mypage-title">マイページ</h1>
-<!--	<span class="mypage-name" th:text="${account.name}+さん"></span>-->
 	<form th:action="@{/mypage/edit}" method="get">
+		<span class="mypage-name">[[${@account.name}]]さん</span>
 		<button class="mypage-button">プロフィールを編集する</button>
+		<img src="profile.jpg">
 	</form>
 	<div style="text-align: center;">
 	  <a href="/yado/history">ご予約の確認はこちらから</a>
