--- a/src/main/resources/templates/hotelsdetail.html
+++ b/src/main/resources/templates/hotelsdetail.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>商品詳細ページ</title>
-		<link rel="stylesheet" type="text/css" href="/css/style.css">
+		<link rel="stylesheet" type="text/css" href="/css/Aikawa.css">
 
 		<!-- Google Fonts 読み込み -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
