検索機能使えるようにしました

--- a/src/main/resources/templates/hotels.html
+++ b/src/main/resources/templates/hotels.html
@@ -24,7 +24,7 @@
 		<div class="relative">
 			<img src="image/1-10.png" width="100%" class="imgth">
 			<div class="boxer">
-				<form action="" method="post">
+				<form>
 
 					<div class="selectbox-3">
 						<select size="1" name="area">
