イメージの内容削除

--- a/src/main/resources/static/css/Jung.css
+++ b/src/main/resources/static/css/Jung.css
@@ -517,7 +517,7 @@ label {
 	margin-bottom: 5px;
 }
 
-.login_text {
+.login_text input {
   width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
