--- a/src/main/resources/static/css/Aikawa.css
+++ b/src/main/resources/static/css/Aikawa.css
@@ -168,7 +168,7 @@ body {
 
 h4 {
 	text-align: center;
-	color: #e5857b;
+	color: rgb(0, 0, 0);
 }
 
 .aa {
@@ -284,7 +284,7 @@ body {
 	padding-top: 8px;
 	background-color: #EFF0F7;
 	width: 24%;
-	height: 400px;
+	height: 270px;
 	border-radius: 16px;
 	overflow: hidden;
 	box-shadow: 0px 0px -9px #777777;
@@ -342,7 +342,8 @@ li {
 
 .log4 img {
 	height: 75px;
-	border-radius: 100%;
+	border-radius: 5%;
+	
 }
 
 .log5 {
@@ -584,7 +585,7 @@ body {
 }
 
 .blank {
-	height: 140px;
+	height: 100px;
 }
 
 
