--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -28,10 +28,13 @@
 		<input type="text" style="width: 80px;" name="expiry" placeholder="月">
 		<a>/</a>
 		<input type="text" style="width: 80px;" name="expiry" placeholder="年(下二桁)"><br>
+		<form action="/mypage/edit" method="post" enctype="multipart/form-data">
 		<input type="file" name="image"><br>
 		<a class="edit-commentt">*は必須項目です</a><br>
 		<button class="edit-button">変更</button>
 	</form>
+	<h1>アップロードした画像の表示</h1>
+	<img alt="" th:src="${imageUrl}" style="width: 300px;">
 	</main>
 	<div style="text-align: center;">
 	     <a href="/mypage">マイページへ</a>
