--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -6,9 +6,8 @@
 <link rel="stylesheet" type="text/css" href="/css/Jung.css">
 </head>
 <body>
-	<header>
-		<h1>休.com</h1>
-	</header>
+	<span th:replace="header2">
+	</span>
 	
 		<div class="login-container">
 		<div class="form-group">
@@ -17,10 +16,10 @@
 			</ul>
 		
 		<form class="login_text" action="/user/add" method="post">
-			<input type="text" name="name" placeholder="名前"><br>
-			<input type="email" name="email" placeholder="メールアドレス"><br>
-			<input type="text" name="address" placeholder="住所"><br>
-			<input type="text" name="tel" placeholder="電話番号" maxlength="11" oninput="this.value=this.value.replace(/[^0-9]/g,'');"><br>
+			<input type="text" name="name" th:value="${name}" placeholder="名前"><br>
+			<input type="email" name="email" th:value="${email}" placeholder="メールアドレス"><br>
+			<input type="text" name="address" th:value="${address}" placeholder="住所"><br>
+			<input type="text" name="tel" th:value="${tel}" placeholder="電話番号" maxlength="11" oninput="this.value=this.value.replace(/[^0-9]/g,'');"><br>
 			<input type="password" name="password" minlength="8" placeholder="パスワード（8文字以上）"><br>
 			<input type="text" name="cardNo" placeholder="クレジットカード情報登録" maxlength="16" oninput="this.value=this.value.replace(/[^0-9]/g,'');"><br>
 			<input type="text" name="code" placeholder="セキュリティコード"><br>
