--- a/src/main/resources/templates/completed.html
+++ b/src/main/resources/templates/completed.html
@@ -9,6 +9,9 @@
 		<h1>休.com</h1>
 	</header>
 	<h3>宿の予約が完了しました<br>
+	<span th:text="${hotels.name}"></span>
+	<span th:text="${hotels.address}"></span>
+	
     ご利用ありがとうございます</h3>
 	<form action="/hotels" method="get">
     	<button>OK</button>
