history.htmlのCSS変更とデフォルトコンストラクタの追加

--- a/src/main/resources/static/css/tachiki.css
+++ b/src/main/resources/static/css/tachiki.css
@@ -629,9 +629,15 @@ label {
 	margin: 0 auto;
 }
 /*宿予約履歴画面*/
-
 body,
 header,
 footer {
 	width: 100%;
+}
+
+.history-main1{
+	max-width: 500px;
+}
+.history-main2{
+	max-width: 500px;
 }
