--- a/src/main/resources/static/css/tachiki.css
+++ b/src/main/resources/static/css/tachiki.css
@@ -629,6 +629,12 @@ label {
 	margin: 0 auto;
 }
 /*宿予約履歴画面*/
+.history-main1{
+	max-width: 500px;
+}
+.history-main2{
+	max-width: 500px;
+}
 
 body,
 header,
