--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -3,14 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <title>宿予約履歴</title>
-<link rel="stylesheet" type="text/css" href="/css/style.css">
+<link rel="stylesheet" type="text/css" href="/css/tachiki.css">
 </head>
 <body>
 	<header>
 		<h1>休.com</h1>
 	</header>
-	[[${@account.name}]]さんのご予約履歴
-	<img src="yado2.jpg" width="300px" height="200px"><br>
+	[[${@account.name}]]さんのご予約履歴<br>
+	<main class="history-main1">
+	<img src="/image/1-1.jpg" width="300px" height="200px"><br>
+	</main>
+	<main class="history-main2">
+		<img src="/image/1-10.jpg" width="300px" height="200px">
+	</main>
 	<a href="/mypage">マイページへ</a>
 </body>
 </html>
