--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -10,6 +10,12 @@
 	<h1 class="mypage-title">マイページ</h1>
 	<form th:action="@{/mypage/edit}" method="get">
 		<span class="mypage-name">[[${@account.name}]]さん</span>
+		
+			<img th:src="${customers.image}">
+			<p th:text="${customers.name}">
+		</p>
+		<p th:text="${customers.image}"></p>
+		<p th:each="hotel:${hotels}" th:text="${hotel.name}" ></p>
 		<button class="mypage-button">プロフィールを編集する</button>
 		<img src="profile.jpg">
 	</form>
