--- a/src/main/resources/static/css/tachiki.css
+++ b/src/main/resources/static/css/tachiki.css
@@ -577,6 +577,11 @@ label {
 .mypage-name{
 	text-align: center;
 }
+
+.mypage-form{
+	text-align: center;
+}
+
 .mypage-title {
 	text-align: center;
 }
