--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -22,10 +22,10 @@
 			<input type="text" name="tel" th:value="${tel}" placeholder="電話番号" maxlength="11" oninput="this.value=this.value.replace(/[^0-9]/g,'');"><br>
 			<input type="password" name="password" minlength="8" placeholder="パスワード（8文字以上）"><br>
 			<input type="text" name="cardNo" placeholder="クレジットカード情報登録" maxlength="16" oninput="this.value=this.value.replace(/[^0-9]/g,'');"><br>
-			<input type="text" name="code" placeholder="セキュリティコード"><br>
-			<input type="text" style="width: 80px;" name="expiry" placeholder="月">
+			<input type="text" name="code" placeholder="セキュリティコード" maxlength="3" oninput="this.value=this.value.replace(/[^0-9]/g,'');"><br>
+			<input type="text" style="width: 80px;" name="expiry" placeholder="月" maxlength="2" oninput="this.value=this.value.replace(/[^0-9]/g,'');">
 			<a>/</a>
-			<input type="text" style="width: 80px;" name="expiry" placeholder="年(下二桁)"><br>
+			<input type="text" style="width: 80px;" name="expiry" placeholder="年(下二桁)" maxlength="2" oninput="this.value=this.value.replace(/[^0-9]/g,'');"><br>
 <!--			<p>アイコンの写真選択</p>-->
 <!--			    <input type="file" name="image"><br>-->
 
